Fixed some of the glitches in my code according to the recommendations of FindBugs